Fix layout issues with rich text editor
- fix bubble menu being able to get out of the bottom boundary
- fix empty comments message not sticky

--- a/packages/app/src/components/page-editor/page-editor-rich-text/page-editor-rich-text-comments.css
+++ b/packages/app/src/components/page-editor/page-editor-rich-text/page-editor-rich-text-comments.css
@@ -3,7 +3,11 @@
 		position: relative;
 		padding: 16px;
 
-		/* z-index: 1; */
+		/*
+		Necessary to ensure that if there are no comments,
+		the message remains sticky when scrolling.
+		*/
+		min-height: 100cqh;
 	}
 
 	.PageEditorRichTextAnchoredComments-empty {
@@ -11,6 +15,13 @@
 		align-items: center;
 		justify-content: center;
 		color: var(--color-fg-06);
+
+		/* 
+		Sticky relative to `PageEditorSidebar-toolbar` and 
+		the padding of `PageEditorRichTextAnchoredComments`.
+		*/
+		position: sticky;
+		top: 60px;
 	}
 
 	.PageEditorRichTextAnchoredComments-anchored-elements-container {
