--- a/packages/app/src/components/page-editor/page-editor-rich-text/page-editor-rich-text.css
+++ b/packages/app/src/components/page-editor/page-editor-rich-text/page-editor-rich-text.css
@@ -1,7 +1,7 @@
 @layer components {
 	/* #region root */
 	.PageEditorRichText {
-		height: 100%;
+		height: max-content;
 		width: 100%;
 		display: flex;
 		flex-direction: column;
@@ -22,7 +22,8 @@
 		Make this the `offsetElement` for the editor.
 		Some floating elements are injected in the `offsetElement`.
 		*/
-		position: relative;
+		contain: content;
+		/* position: relative; */
 
 		.prosemirror-dropcursor-block {
 			transition: top 0.15s ease-out;
@@ -46,7 +47,13 @@
 	/* #region editor content */
 	.PageEditorRichText-editor-content {
 		width: 100%;
-		padding: 64px 64px 16px 64px;
+
+		/*
+		Adding a big padding at the bottom to ensure there's anough
+		space at the bottom of the editor for the bubble menu,
+		otherwise positioning it becomes a pain.
+		*/
+		padding: 64px 64px 300px 64px;
 
 		color: var(--PageEditorRichText-text-color-fg-default);
 
@@ -244,6 +251,14 @@
 	.PageEditorRichTextBubble-button {
 		gap: 4px;
 		border-radius: 0;
+
+		&:first-child {
+			border-radius: 6px 0 0 6px;
+		}
+
+		&:last-child {
+			border-radius: 0 6px 6px 0;
+		}
 	}
 
 	.PageEditorRichTextBubble-icon {
